passport not found 오류 고침 + api연결 등

--- a/package.json
+++ b/package.json
@@ -14,15 +14,23 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.16.3",
+    "@types/connect-flash": "^0.0.37",
+    "@types/express-session": "^1.17.4",
     "@types/http-errors": "^1.8.1",
+    "@types/passport": "^1.0.7",
     "agendash": "^2.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "event-dispatch": "^0.4.1",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
+    "express-session": "^1.17.2",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.9.0",
     "typedi": "^0.10.0",
