--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,8 @@
     ]
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-transform-runtime",
     "lodash"
